--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,10 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:name=".TodoListApplication"
         android:supportsRtl="true"
         android:theme="@style/Theme.TodoItems">
-        <activity android:name=".MainActivity">
+        <activity android:name=".TodoListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
