--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".EditItemActivity">
+        </activity>
+
     </application>
 
 </manifest>
